# bold-gen-backend

./: pyproject.toml  requirements.txt
bold_gen_backend/: main.py
bold_gen_backend/buyer/: main.py
bold_gen_backend/contractor/: main.py
bold_gen_backend/database/: connection.py
bold_gen_backend/database/models/: property.py  user.py
bold_gen_backend/internal/: admin.py
bold_gen_backend/landlord/: main.py
bold_gen_backend/routers/: auth.py  buyer.py  contractor.py  landlord.py  tennat.py
bold_gen_backend/services/: admin_service.py  auth_service.py  landlord_service.py
bold_gen_backend/tenant/: main.py
bold_gen_backend/utils/: security.py
