[tool.poetry]
name = "bold-gen-backend"
version = "0.1.0"
description = ""
authors = ["Muhammad-Masood <development.masood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
requests = "^2.32.3"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bold-gen-backend.main:start"